--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Tamim's Portfolio</title>
@@ -32,12 +28,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<li><a href="https://www.linkedin.com/in/tmrahman/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/t32rahman" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#contact" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://mail.google.com/mail/u/0/#inbox?compose=new" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -121,8 +114,9 @@
 						<section id="projects">
 							<div class="container">
 								<h3>Projects</h3>
-								<p>This is a list of the various side projects that I've been taking on over the past few year to continue the learning outside of school.
-									Please click the image to be redirected to repository containing the code for the projects aswell as a demo.
+								<p>
+									This is a list of the various side projects that I've been taking on over the past few year to continue the learning outside of school.
+									Please click the image to be redirected to repository containing the code for the projects and the demo.
 								</p>
 								<div class="features">
 									<article>
