Added ReadMe and Updated website content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon_ryerson.jpg" type="image/jpg" />
 	</head>
 	<body class="is-preload">
 
@@ -85,11 +86,15 @@
 									<p></p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/sike_logo.svg" alt="" /></a>
+											<a href="https://sike.org/" class="image"><img src="images/sike_logo.svg" alt="" /></a>
 											<div class="inner">
-												<h4>Research Assistant (Cryptography)</h4>
-												<p>Applied aspects of abstract algebra and in-depth knowledge of Rust documentation to create a post-quantum crypto-library. 
-												Implemented the bignum library for the SIKEp434 implementation in 8-bit AVR microcontrollers.</p>
+												<h4>Ryerson University</h4>
+												<p>
+													<b>Research Assistant (Cryptography)</b> 
+													<br/> 
+													Applied aspects of abstract algebra and in-depth knowledge of Rust documentation to create a post-quantum crypto-library. 
+													Implemented the bignum library for the SIKEp434 implementation in 8-bit AVR microcontrollers.
+												</p>
 											</div>
 										</article>
 										<!-- <article>
