Added personal website to projects

--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
 											<p>Created a frontend for google's base search, image search, and advanced search pages. </p>
 										</div>
 									</article>
+									<article>
+										<a href="https://github.com/t32rahman/t32rahman.github.io" class="image"><img src="images/personal_website.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Personal Portfolio Website</h4>
+											<p>Created a web site using HTML/CSS/JS to display my skills, experience, projects, and contact information.</p>
+										</div>
+									</article>
 								</div>
 							</div>
 						</section>
