--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section id="qual">
 								<div class="container">
 									<h3>Qualifications</h3>
-									<p>I am experienced in fullstack web development, and android development, I have experience working in the field of cryptography, computer vision, and data visualization.</p>
+									<p>I am experienced in fullstack web development and android development, I have experience working in the field of cryptography, computer vision, and data visualization.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">HTML/CSS/JS, Python, Rust, C</li>
 										<li class="icon solid fa-file-code">Android development using Java</li>
@@ -164,9 +164,6 @@
 										I am actively seeking opportunities so please don't hesitate to contact me. 
 									</p>
 									<ul style="list-style: None;">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 										<li>
 											<a href="https://www.linkedin.com/in/tmrahman/" class="icon brands fa-linkedin">
 												<span class="label">LinkedIn</span>
