--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section id="qual">
 								<div class="container">
 									<h3>Qualifications</h3>
-									<p>I am experienced in fullstack web development and android development, I have experience working in the field of cryptography, computer vision, and data visualization.</p>
+									<p>I am experienced in fullstack web development and Android development. I have experience working in the field of cryptography, computer vision, and data visualization.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">HTML/CSS/JS, Python, Rust, C</li>
 										<li class="icon solid fa-file-code">Android development using Java</li>
@@ -120,36 +120,36 @@
 							<div class="container">
 								<h3>Projects</h3>
 								<p>
-									This is a list of the various side projects that I've been taking on over the past few year to continue the learning outside of school.
+									This is a list of the various side projects that I've been taking on over the past few years to continue the learning outside of school.
 									Please click the image to be redirected to repository containing the code for the projects and the demo.
 								</p>
 								<div class="features">
 									<article>
 										<a href="https://github.com/t32rahman/CVDelivery" class="image"><img src="images/CVDelivery.gif" alt="" /></a>
 										<div class="inner">
-											<h4>Computer on Aided Contactless delivery</h4>
+											<h4>Computer Vision Aided Contactless Delivery</h4>
 											<p>A python app that uses openCV and the Google Vision API to notify homeowners that a package has been delivered to their home (via email).</p>
 										</div>
 									</article>
 									<article>
 										<a href="https://github.com/t32rahman/pokedex" class="image"><img src="images/pokedex.gif" alt="" /></a>
 										<div class="inner">
-											<h4>Android - Pokedex</h4>
-											<p>An android app made using OOP in Java. It allows users to search up information regarding their favourite pokemon such as type, id, and description.</p>
+											<h4>Android - Pokédex</h4>
+											<p>An android app made using OOP in Java. It allows users to search up information regarding their favourite pokémon such as type, id, and description.</p>
 										</div>
 									</article>
 									<article>
 										<a href="https://github.com/t32rahman/google-search-frontend" class="image"><img src="images/search_demo.gif" alt="" /></a>
 										<div class="inner">
 											<h4>Google Search Frontend</h4>
-											<p>Created a frontend for google's base search, image search, and advanced search pages. </p>
+											<p>Created a front end for Google's base search, image search, and advanced search pages. </p>
 										</div>
 									</article>
 									<article>
 										<a href="https://github.com/t32rahman/t32rahman.github.io" class="image"><img src="images/personal_website.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Personal Portfolio Website</h4>
-											<p>Created a web site using HTML/CSS/JS to display my skills, experience, projects, and contact information.</p>
+											<p>Created a website using HTML/CSS/JS to display my skills, experience, projects, and contact information.</p>
 										</div>
 									</article>
 								</div>
@@ -160,7 +160,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>
-										Please feel free to contact me anytime via LinkedIn or e-mail. I'd love to chat about anything related to software engineering, cybersecurity, or anything related to tech.
+										Please feel free to contact me anytime via LinkedIn or e-mail. I'd love to chat about software engineering, cybersecurity, or anything related to tech.
 										I am actively seeking opportunities so please don't hesitate to contact me. 
 									</p>
 									<ul style="list-style: None;">
