--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<h3>Projects</h3>
 								<p>
 									This is a list of the various side projects that I've been taking on over the past few years to continue the learning outside of school.
-									Please click the image to be redirected to repository containing the code for the projects and the demo.
+									Please click the images to be redirected to repository containing the code for the projects and their demos.
 								</p>
 								<div class="features">
 									<article>
