Add CV download button in AboutMe

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 										attending hackathons. Once I finish my bachelors, I hope to pursue a masters in computer science. If you have any question regarding my qualifications 
 										and/or potiential opportunities, I can be reached through LinkedIn and e-mail.
 									</p>
+									<a class="button primary large" href="./files/TamimRahman_resume.pdf" >Download CV</a>
 								</div>
 							</section>
 
@@ -146,7 +147,7 @@
 										</div>
 									</article>
 									<article>
-										<a href="https://github.com/t32rahman/t32rahman.github.io" class="image"><img src="images/personal_website.jpg" alt="" /></a>
+										<a href="https://github.com/t32rahman/t32rahman.github.io" class="image"><img src="images/personal_website.gif" alt="" /></a>
 										<div class="inner">
 											<h4>Personal Portfolio Website</h4>
 											<p>Created a website using HTML/CSS/JS to display my skills, experience, projects, and contact information.</p>
