--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									<h3>Qualifications</h3>
 									<p>I am experienced in fullstack web development and Android development. I have experience working in the field of cryptography, computer vision, and data visualization.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">HTML/CSS/JS, Python, Rust, C</li>
+										<li class="icon solid fa-code">HTML/CSS/JS, Python, Rust, C/C++</li>
 										<li class="icon solid fa-file-code">Android development using Java</li>
 										<li class="icon solid fa-cogs">Creative problem solver</li>
 										<li class="icon solid fa-code-branch">Experienced in git version control</li>
