--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Tamim Rahman</a></h1>
+					<h1 id="logo"><a href="https://www.linkedin.com/in/tmrahman/">Tamim Rahman</a></h1>
 					<p>Second-year computer engineering student<br />
 					Ryerson University</p>
 				</header>
@@ -27,7 +27,7 @@
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
-				<footer>
+				<footer style="padding-top: 0em;">
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/tmrahman/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/t32rahman" class="icon brands fa-github"><span class="label">Github</span></a></li>
