Added extracurricular section and updated current internshio<li>Created a python app to simulate incoming radiation data for the Mars rover competition

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
 									<h3>Qualifications</h3>
 									<p>I am experienced in fullstack web development and Android development. I have experience working in the field of cryptography, computer vision, and data visualization.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">HTML/CSS/JS, Python, Rust, C/C++</li>
-										<li class="icon solid fa-file-code">Android development using Java</li>
-										<li class="icon solid fa-cogs">Creative problem solver</li>
-										<li class="icon solid fa-code-branch">Experienced in git version control</li>
-										<li class="icon solid fa-object-ungroup">Object Oriented Programming</li>
-										<li class="icon solid fa-users">Collaboration and communication</li>
+										<li class="icon solid fa-code">Python, Java, JS, C/C++, and Rust.</li>
+										<li class="icon solid fa-object-ungroup">Object Oriented Programming.</li>
+										<li class="icon solid fa-file-code">Full stack web development.</li>
+										<li class="icon solid fa-file-code">Android development using Java.</li>
+										<li class="icon solid fa-code-branch">Experienced in git version control.</li>
+										<li class="icon solid fa-terminal">Experienced in Linux terminal.</li>
+										<li class="icon solid fa-cogs">Creative problem solver.</li>
+										<li class="icon solid fa-users">Collaboration and communication.</li>
 									</ul>
 								</div>
 							</section>
@@ -88,35 +90,68 @@
 									<p></p>
 									<div class="features">
 										<article>
-											<a href="https://sike.org/" class="image"><img src="images/sike_logo.svg" alt="" /></a>
+											<a href="https://ryerson.ca/crl" class="image"><img src="images/logo_CRL.png" alt="CRL" /></a>
 											<div class="inner">
-												<h4>Ryerson University</h4>
+												<h4>Software Engineering Intern</h4>
 												<p>
-													<b>Research Assistant (Cryptography)</b> 
-													<br/> 
+													<b>Cybersecurity Research Lab (CRL)</b> 
+													<br/> <i>(Sep 2020 - Present)</i> <br/>
+													Developing a prototype web application using Sails.js to show investors the potential of
+													the CRL blockchain network in fraud prevention in the real estate industry.
+												</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://sike.org/" class="image"><img src="images/sike_logo.svg" alt="SIKE" /></a>
+											<div class="inner">
+												<h4>Research Assistant - Cryptography</h4>
+												<p>
+													<b>Ryerson University</b> 
+													<br/> <i>(May 2020 - Aug 2020)</i> <br/>
 													Applied aspects of abstract algebra and in-depth knowledge of Rust documentation to create a post-quantum crypto-library. 
 													Implemented the bignum library for the SIKEp434 implementation in 8-bit AVR microcontrollers.
 												</p>
 											</div>
 										</article>
-										<!-- <article>
-											<a href="#" class="image"><img src="images/r3logo.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Controls Developer - Ryerson Rams Robotics (R3)</h4>
-												<p>Developed a python heat map to visualize radiation data for the Mars rover, resulting in a significant decrease in decision making time for operators.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/RR_logo.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Avionics Specialist - Ryerson Rocketry</h4>
-												<p>Designed an encryption/decryption algorithm for communication between ground</p>
-											</div>
-										</article> -->
-									</div>
 								</div>
 							</section>
 
+							<section id="extracurricular">
+								<div class="container">
+									<h3>Extracurricular</h3>
+									<p></p>
+									<div class="features">
+										<article>
+											<a href="https://ryerson.ca/crl" class="image"><img src="images/logo_recess.png" alt="CRL" /></a>
+											<div class="inner">
+												<h4>Lead Developer (Executive)</h4>
+												<p>
+													<b>Ryerson ECE Student Society</b> 
+													<br/> <i>(Sep 2020 - Present)</i> <br/>
+													Developed a custom discord bot using discord.py using to authenticate and automate
+													user roles/permissions within the union’s official server for online events/enrichment.
+
+												</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://sike.org/" class="image"><img src="images/r3logo.jpg" alt="SIKE" /></a>
+											<div class="inner">
+												<h4>Controls Developer</h4>
+												<p>
+													<b>Ryerson Rams Robotics (R3)</b> 
+													<br/> <i>(Sep 2019 - Aug 2020)</i> <br/>
+													Developed a python heat map to visualize radiation data for the Mars rover, resulting in a
+													significant decrease in decision making time for operators.
+												
+													Created a python app to simulate incoming radiation data for the Mars rover competition
+													leading to more robust testing and an expected decrease in AI development time
+												</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
 						<!-- Projects -->
 						<section id="projects">
 							<div class="container">
