Added extracurriculars to nav bar
Also included minor improvements.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="https://www.linkedin.com/in/tmrahman/">Tamim Rahman</a></h1>
-					<p>Second-year computer engineering student<br />
-					Ryerson University</p>
+					<!-- <p>Second-year computer engineering student<br />
+					Ryerson University</p> -->
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#about" class="active">About Me</a></li>
 						<li><a href="#qual">Qualifications</a></li>
 						<li><a href="#experience">Experience</a></li>
+						<li><a href="#extracurricular">Extracurricular</a></li>
 						<li><a href="#projects">Projects</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -55,11 +56,16 @@
 											aspiring to be a software engineer.</p>
 									</header>
 									<p>
-										Currently, I am working with a team of developers, under the supervision of Dr. Javad Doliskani, to create an implementation of post-quantum cryptography 
-										using Rust. I am passionate about the fields of cybersecurity and applied cryptography. I hope to innovate software
-										to empower individuals and corporations to protect against post-quantum malicious activity. During my free time, I enjoy taking on software side projects and 
+										Currently, I am working for the Cybersecurity Research Lab as an Software Engineering Intern. I am looking I am passionate about the fields of cybersecurity and back-end development. 
+										I hope to innovate software to empower individuals and corporations to protect against post-quantum malicious activity. During my free time, I enjoy taking on software side projects and 
 										attending hackathons. Once I finish my bachelors, I hope to pursue a masters in computer science. If you have any question regarding my qualifications 
-										and/or potiential opportunities, I can be reached through LinkedIn and e-mail.
+										and/or potiential opportunities, I can be reached through <a href="https://www.linkedin.com/in/tmrahman/">LinkedIn</a> and <a href="#contacts">e-mail</a>e-mail.
+									</p>
+									<h3>Education</h3>
+									<h4>Ryerson University (Sep 2019 - June 2023)</h4>
+									<p>
+										Bachelor of Engineering, Computer Engineering with Software Specialization. <br>
+										<i>GPA: 3.8 / 4.0</i>
 									</p>
 									<a class="button primary large" href="./files/TamimRahman_resume.pdf" >Download CV</a>
 								</div>
