Small fix to hyperlink

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										Currently, I am working for the Cybersecurity Research Lab as an Software Engineering Intern. I am looking I am passionate about the fields of cybersecurity and back-end development. 
 										I hope to innovate software to empower individuals and corporations to protect against post-quantum malicious activity. During my free time, I enjoy taking on software side projects and 
 										attending hackathons. Once I finish my bachelors, I hope to pursue a masters in computer science. If you have any question regarding my qualifications 
-										and/or potiential opportunities, I can be reached through <a href="https://www.linkedin.com/in/tmrahman/">LinkedIn</a> and <a href="#contacts">e-mail</a>.
+										and/or potiential opportunities, I can be reached through <a href="https://www.linkedin.com/in/tmrahman/">LinkedIn</a> and <a href="#contact">e-mail</a>.
 									</p>
 									<h3>Education</h3>
 									<h4>Ryerson University (Sep 2019 - June 2023)</h4>
