--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<h4>Ryerson University (Sep 2019 - June 2023)</h4>
 									<p>
 										Bachelor of Engineering, Computer Engineering with Software Specialization. <br>
-										<i>GPA: 3.8 / 4.0</i>
+										<i>GPA: 3.72 / 4.33</i>
 									</p>
 									<a class="button primary large" href="./files/TamimRahman_resume.pdf" >Download CV</a>
 								</div>
@@ -98,7 +98,7 @@
 										<article>
 											<a href="https://ryerson.ca/crl" class="image"><img src="images/logo_CRL.png" alt="CRL" /></a>
 											<div class="inner">
-												<h4>Software Engineering Intern</h4>
+												<h4>Research Assistant - Developer Intern</h4>
 												<p>
 													<b>Cybersecurity Research Lab (CRL)</b> 
 													<br/> <i>(Sep 2020 - Present)</i> <br/>
