Fully renovated portfolio for Summer/Fall 2022 Internship hunt

--- a/index.html
+++ b/index.html
@@ -52,22 +52,28 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>A passionate computer engineering student<br />
-											aspiring to be a software engineer.</p>
+										<p>A passionate student that is deidcated towards<br />
+											learning, growing, and producing results!</p>
 									</header>
 									<p>
-										Currently, I am working for the Cybersecurity Research Lab as an Software Engineering Intern. I am passionate about the fields of cybersecurity and back-end development. 
-										I hope to innovate software to empower individuals and corporations to protect against post-quantum malicious activity. During my free time, I enjoy taking on software side projects and 
-										attending hackathons. Once I finish my bachelors, I hope to pursue a masters in computer science. If you have any question regarding my qualifications 
-										and/or potiential opportunities, I can be reached through <a href="https://www.linkedin.com/in/tmrahman/">LinkedIn</a> and e-mail.
+										Hi, my name is Tamim Rahman, and I am currently finishing up my third year in computer engineering at Ryerson University. 
+										Here are some of my accomplishments: I have won 3 academic awards, worked on 2 research projects, and placed first in Ryerson IEEE’s 2021 Hackathon. 
+										I am student that believes in the power of grain practical experience and continuous learning. 
+										As such, I have taken the <b>initiative</b> to participate in 2 computer science research internships that helped me strengthen my understanding of the various technologies required in the field of software engineering. 
+										I am also a strong believer in <b>continuous learning</b>. Thus, alongside my university studies, I have also taken online courses through edX and Udemy to keep up with modern frameworks and tools.  
+
+										Currently, I am looking for Summer 2022 and Fall 2022 software engineering internship/Co-op positions. 
+
+										If you have any questions regarding my qualifications and/or have potential opportunities, I can be reached through 
+  										<a href="https://www.linkedin.com/in/tmrahman/">LinkedIn</a> and e-mail.
 									</p>
 									<h3>Education</h3>
 									<h4>Ryerson University (Sep 2019 - June 2023)</h4>
 									<p>
 										Bachelor of Engineering, Computer Engineering with Software Specialization. <br>
-										<i>GPA: 3.72 / 4.33</i>
+										<i>GPA: 3.75 / 4.33</i>
 									</p>
-									<a class="button primary large" href="./files/TamimRahman_resume.pdf" >Download CV</a>
+									<a class="button primary large" href="./files/TamimRahman_resume.pdf" >Resume</a>
 								</div>
 							</section>
 
@@ -75,7 +81,7 @@
 							<section id="qual">
 								<div class="container">
 									<h3>Qualifications</h3>
-									<p>I am experienced in fullstack web development and Android development. I have experience working in the field of cryptography, computer vision, and data visualization.</p>
+									<p>I am experienced in fullstack web development, DevOps, and Android development using Java. I have experience working in the field of cryptography, computer vision, and data visualization.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Python, Java, JS, C/C++, and Rust.</li>
 										<li class="icon solid fa-object-ungroup">Object Oriented Programming.</li>
@@ -83,8 +89,6 @@
 										<li class="icon solid fa-file-code">Android development using Java.</li>
 										<li class="icon solid fa-code-branch">Experienced in git version control.</li>
 										<li class="icon solid fa-terminal">Experienced in Linux terminal.</li>
-										<li class="icon solid fa-cogs">Creative problem solver.</li>
-										<li class="icon solid fa-users">Collaboration and communication.</li>
 									</ul>
 								</div>
 							</section>
@@ -102,8 +106,9 @@
 												<p>
 													<b>Cybersecurity Research Lab (CRL)</b> 
 													<br/> <i>(Sep 2020 - Present)</i> <br/>
-													Developing a prototype web application using Sails.js to show investors the potential of
-													the CRL blockchain network in fraud prevention in the real estate industry.
+													•	Developed a web interface for the rendered display data returned from the blockchain using ReactJS and EpressJS. 
+•	Designed and implemented API endpoints to have controlled access to create, read, update data elements.
+<br/>•	Led the R&D of an intuitive visual editor for blockchain workflows. 
 												</p>
 											</div>
 										</article>
@@ -127,6 +132,19 @@
 									<h3>Extracurricular</h3>
 									<p></p>
 									<div class="features">
+										<article>
+											<a href="https://ryerson.ca/crl" class="image"><img src="images/helium_logo.jpg" alt="CRL" /></a>
+											<div class="inner">
+												<h4>Software Developer</h4>
+												<p>
+													<b>Ryerson ECE Student Society</b> 
+													<br/> <i>(Apr 2021 - Present)</i> <br/>
+													Developed an accurate simulation of the MVP
+													 and designing the communication protocol between the flight controller 
+													 and companion computer using a mixture of C++ and Python for scripting/implementation.
+												</p>
+											</div>
+										</article>
 										<article>
 											<a href="https://ryerson.ca/crl" class="image"><img src="images/logo_recess.png" alt="CRL" /></a>
 											<div class="inner">
@@ -163,7 +181,7 @@
 							<div class="container">
 								<h3>Projects</h3>
 								<p>
-									This is a list of the various side projects that I've been taking on over the past few years to continue the learning outside of school.
+									This is a list of the various side projects that I've finished recently.
 									Please click the images to be redirected to repository containing the code for the projects and their demos.
 								</p>
 								<div class="features">
@@ -182,10 +200,29 @@
 										</div>
 									</article>
 									<article>
-										<a href="https://github.com/t32rahman/google-search-frontend" class="image"><img src="images/search_demo.gif" alt="" /></a>
+										<a href="https://github.com/t32rahman/IoT-Covid-Tracking" class="image"><img src="images/ICUE-covid-phone-tracker.gif" alt="" /></a>
 										<div class="inner">
-											<h4>Google Search Frontend</h4>
-											<p>Created a front end for Google's base search, image search, and advanced search pages. </p>
+											<h4>IoT Covid-19 Tracker (Hackathon winner)</h4>
+											<p>
+												As customers enters the restaurant, they will scan their phones which have 
+												built-in RFID chips. The RFID reader then sends a GET request to our Flask 
+												webserver, saving the customer's phone number and entry time. When the 
+												customer leaves, they scan their phone a second time, which will update 
+												the webserver with their departure time. Customer data will be stored in 
+												a MongoDB database, where we can acess the information directly from out web application.
+											</p>
+										</div>
+									</article>
+									<article>
+										<a href="https://github.com/t32rahman/VidQuiz" class="image"><img src="images/demo_vid2go.gif" alt="" /></a>
+										<div class="inner">
+											<h4>Vid2Go</h4>
+											<p>Vid2Go is a Google Chrome Extension, which allows you to identify which YouTube videos are quality-enriched, 
+												by providing time-stamps to selective/important segments. 
+												With the input of keywords, users can take advantage of Vid2Go, 
+												which our software checks YouTube's API for the captions file, 
+												and reveals 5 - Time Stamps for the user. Providing important segments related to the keyword, 
+												Vid2Go allows students to spend more time studying on relavent content</p>
 										</div>
 									</article>
 									<article>
