fixed small errors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar_grey.jpg" alt="" /></span>
 					<h1 id="logo"><a href="https://www.linkedin.com/in/tmrahman/">Tamim Rahman</a></h1>
 					<!-- <p>Second-year computer engineering student<br />
 					Ryerson University</p> -->
@@ -58,9 +58,10 @@
 									<p>
 										Hi, my name is Tamim Rahman, and I am currently finishing up my third year in computer engineering at Ryerson University. 
 										Here are some of my accomplishments: I have won 3 academic awards, worked on 2 research projects, and placed first in Ryerson IEEE’s 2021 Hackathon. 
-										I am student that believes in the power of grain practical experience and continuous learning. 
+										I am a student that believes in the power of gaining practical experience. 
 										As such, I have taken the <b>initiative</b> to participate in 2 computer science research internships that helped me strengthen my understanding of the various technologies required in the field of software engineering. 
-										I am also a strong believer in <b>continuous learning</b>. Thus, alongside my university studies, I have also taken online courses through edX and Udemy to keep up with modern frameworks and tools.  
+										I am also a strong believer in <b>continuous learning</b>. 
+										Thus, alongside my university studies, I have also taken online courses through edX and Udemy to keep up with modern frameworks and tools.    
 
 										Currently, I am looking for Summer 2022 and Fall 2022 software engineering internship/Co-op positions. 
 
