--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 													<b>Cybersecurity Research Lab (CRL)</b> 
 													<br/> <i>(Sep 2020 - Present)</i> <br/>
 													•	Developed a web interface for the rendered display data returned from the blockchain using ReactJS and EpressJS. 
-•	Designed and implemented API endpoints to have controlled access to create, read, update data elements.
+<br/>•	Designed and implemented API endpoints to have controlled access to create, read, update data elements.
 <br/>•	Led the R&D of an intuitive visual editor for blockchain workflows. 
 												</p>
 											</div>
