--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>A passionate student that is deidcated towards<br />
+										<p>A passionate student that is dedicated towards<br />
 											learning, growing, and producing results!</p>
 									</header>
 									<p>
