--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 							<a href="https://mail.google.com/mail/u/0/#inbox?compose=new"
 								class="icon solid fa-envelope">
 								<span class="label">Email</span>
-								t10rahman@ryerson.ca
+								tamimr247@gmail.ca
 							</a>
 						</li>
 					</ul>
