--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 							learning, growing, and producing results!</p>
 					</header>
 					<p>
-						Hi, my name is Tamim Rahman, and I am currently finishing up my third year in computer
-						engineering at Ryerson University.
+						Hi, my name is Tamim Rahman, and I am currently in my Co-op year at Toronto Metropolitan University.
 						Here are some of my accomplishments: I have won 3 academic awards, worked on 2 research
 						projects, and placed first in Ryerson IEEE’s 2021 Hackathon.
 						I am a student that believes in the power of gaining practical experience.
@@ -80,7 +79,7 @@
 						<a href="https://www.linkedin.com/in/tmrahman/">LinkedIn</a> and E-mail.
 					</p>
 					<h3>Education</h3>
-					<h4>Ryerson University (Sep 2019 - June 2024)</h4>
+					<h4>Toronto Metropolitan University (Sep 2019 - June 2024)</h4>
 					<p>
 						Bachelor of Engineering, Computer Engineering with Software Specialization. <br>
 						<i>GPA: 3.72 / 4.33</i>
@@ -129,7 +128,7 @@
 							</div>
 						</article>
 						<article>
-							<a href="https://ryerson.ca/crl" class="image"><img src="images/logo_CRL.png"
+							<a href="https://www.torontomu.ca/tedrogersschool/cybersecurity-research-lab/" class="image"><img src="images/logo_CRL.png"
 									alt="CRL" /></a>
 							<div class="inner">
 								<h4>Research Assistant - Developer Intern</h4>
@@ -167,12 +166,12 @@
 					<p></p>
 					<div class="features">
 						<article>
-							<a href="https://ryerson.ca/crl" class="image"><img src="images/helium_logo.jpg"
-									alt="CRL" /></a>
+							<a href="https://www.torontomu.ca/zone-learning/design-fabrication-zone/membership/helium-aero/" class="image"><img src="images/helium_logo.jpg"
+									alt="Helium" /></a>
 							<div class="inner">
 								<h4>Software Developer</h4>
 								<p>
-									<b>Ryerson ECE Student Society</b>
+									<b>Helium Aero (Startup)</b>
 									<br /> <i>(Apr 2021 - Present)</i> <br />
 									Developed an accurate simulation of the MVP
 									and designing the communication protocol between the flight controller
