--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<section id="qual">
 				<div class="container">
 					<h3>Qualifications</h3>
-					<p>I am experienced in fullstack web development, DevOps, and Android development using Java. I have
+					<p>I am experienced in Fullstack Web Development, Python Automation, DevOps, and Android development using Java. I have
 						experience working in the field of cryptography, computer vision, and data visualization.</p>
 					<ul class="feature-icons">
 						<li class="icon solid fa-code">Python, Java, JS, C/C++, and Rust.</li>
